# rthk-csv-megafetcher

./: .gitignore  Cargo.toml  README.md
src/: cli.yml  main.rs  schema.rs
