[package]
name = "rthk-csv-megafetcher"
version = "0.1.0"
authors = ["Anson Cheung <git@anson-cheung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "^1.1.6"
serde = { version = "^1.0.126", features = ["derive"] }
anyhow = "^1.0.40"
clap = { version = "^2.33.3", features = ["yaml"] }